--- a/style.css
+++ b/style.css
@@ -1768,7 +1768,8 @@ nav {
     flex-direction: column;
     width: 72rem;
     gap: 20px;
-    margin-top: 50px;
+    margin-top: 40px;
+    margin-bottom: 60px;
     cursor: pointer;
 
 
